[gd_scene load_steps=15 format=2]

[ext_resource path="res://World/Bush.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://World/bar.png" type="Texture" id=4]
[ext_resource path="res://World/GrassBackground.png" type="Texture" id=5]
[ext_resource path="res://CollisionShape2DBottom.gd" type="Script" id=6]
[ext_resource path="res://World.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 125, 5 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 155 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, -10 )
b = Vector2( 0, 140 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 245, 0 )

[sub_resource type="CircleShape2D" id=2]
radius = 4.82009

[sub_resource type="CircleShape2D" id=7]
radius = 5.13371

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 3 )

[node name="World" type="Node2D"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 0.33371
margin_top = 5.33371
margin_right = 245.334
margin_bottom = 154.334
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frame" type="KinematicBody2D" parent="."]

[node name="CollisionShape2DTop" type="CollisionShape2D" parent="Frame"]
position = Vector2( 125, 5 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Frame"]
shape = SubResource( 3 )

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Frame"]
position = Vector2( 245, 15 )
shape = SubResource( 4 )

[node name="CollisionShape2DBottom" type="CollisionShape2D" parent="Frame"]
self_modulate = Color( 0.960784, 0.329412, 0.329412, 1 )
position = Vector2( 0, 155 )
shape = SubResource( 5 )
script = ExtResource( 6 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( -2.08309, 3.67205 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Ball"]
position = Vector2( 90.1251, 40.1669 )
scale = Vector2( 0.305397, 0.30279 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2( 90, 40 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="Ball"]
priority = 1.0
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball/Hitbox"]
position = Vector2( 90.0276, 40.1546 )
shape = SubResource( 7 )

[node name="Bar" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Bar"]
position = Vector2( 135, 145 )
scale = Vector2( 0.177419, 0.282609 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bar"]
position = Vector2( 135, 145 )
shape = SubResource( 6 )
[connection signal="area_entered" from="Ball/Hitbox" to="." method="_on_Area2D_area_entered"]
